--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "apollo-server": "^2.1.0",
+    "dotenv": "^6.1.0",
     "graphql": "^14.0.2"
   },
   "devDependencies": {
