--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "apollo-server": "^2.1.0",
-    "dotenv": "^6.1.0",
-    "graphql": "^14.0.2"
+    "apollo-server": "2.1.0",
+    "dotenv": "6.1.0",
+    "graphql": "14.0.2",
+    "mongoose": "5.3.4",
+    "nodemon": "1.18.4"
   },
   "devDependencies": {
-    "pino": "^5.7.0",
-    "pino-pretty": "^2.2.2"
+    "pino": "5.7.0",
+    "pino-pretty": "2.2.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server.js | pino-pretty"
+    "dev": "nodemon -r dotenv/config server.js | pino-pretty"
   },
   "repository": {
     "type": "git",
